@@ -36,6 +36,7 @@ subtest 'boolean document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str('') ],
       canonical_uri => [ str('') ],
       _entities => [ { '' => 0 } ],
     ),
@@ -87,6 +88,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str($_//'') ],
       canonical_uri => [ str($_//'') ],
       _entities => [ { '' => 0 } ],
     ),
@@ -108,6 +110,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str('https://foo.com') ],
       canonical_uri => [ str('https://foo.com') ],
       _entities => [ { '' => 0 } ],
     ),
@@ -128,6 +131,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str($_//'') ],
       canonical_uri => [ str('https://foo.com') ], # note canonical_uri has been overwritten
       _entities => [ { '' => 0 } ],
     ),
@@ -149,6 +153,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str($_) ],
       canonical_uri => [ str('https://bar.com') ], # note canonical_uri has been overwritten
       _entities => [ { '' => 0 } ],
     ),
@@ -188,6 +193,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str('https://foo.com') ],
       canonical_uri => [ str('https://foo.com') ],
       _entities => [ { '' => 0 } ],
     ),
@@ -224,6 +230,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ),
+      original_uri => [ str('https://foo.com') ],
       canonical_uri => [ str('https://bar.com') ],
       _entities => [ { map +($_ => 0), '', '/allOf/0', '/allOf/1' } ],
     ),
@@ -245,6 +252,7 @@ subtest 'object document' => sub {
           %configs,
         },
       ],
+      original_uri => [ str('https://my-base.com') ],
       canonical_uri => [ str('https://my-base.com/relative') ],
       _entities => [ { '' => 0 } ],
     ),
@@ -275,6 +283,8 @@ subtest 'object document' => sub {
           %configs,
         },
       ),
+      original_uri => [ str('') ],
+      canonical_uri => [ str('') ],
       _entities => [ { map +($_ => 0), '', '/$defs/foo' } ],
     ),
     'relative uri for inner $id',
@@ -303,6 +313,8 @@ subtest 'object document' => sub {
           %configs,
         },
       ),
+      original_uri => [ str('') ],
+      canonical_uri => [ str('') ],
       _entities => [ { map +($_ => 0), '', '/$defs/foo' } ],
     ),
     'no root $id; absolute uri with path in subschema resource',
@@ -328,6 +340,8 @@ subtest 'object document' => sub {
           },
         },
       ],
+      original_uri => [ str('') ],
+      canonical_uri => [ str('') ],
     ),
     'no root $id or canonical_uri provided; anchor is indexed at the root',
   );
@@ -353,6 +367,8 @@ subtest 'object document' => sub {
           },
         },
       ],
+      original_uri => [ str('https://example.com') ],
+      canonical_uri => [ str('https://example.com') ],
     ),
     'canonical_uri provided; empty uri not added as a referenceable uri when an anchor exists',
   );
@@ -378,6 +394,8 @@ subtest 'object document' => sub {
           },
         },
       ],
+      original_uri => [ str('') ],
+      canonical_uri => [ str('https://my-base.com') ],
     ),
     'absolute uri provided at root; adjacent anchor has the same canonical uri',
   );
@@ -407,6 +425,8 @@ subtest 'object document' => sub {
           },
         },
       ],
+      original_uri => [ str('') ],
+      canonical_uri => [ str('https://my-base.com') ],
     ),
     'absolute uri provided at root; anchor lower down has its own canonical uri',
   );
@@ -981,7 +1001,7 @@ subtest 'custom metaschema_uri' => sub {
   memory_cycle_ok($js, 'no leaks in the evaluator object');
 };
 
-subtest 'multiple uris used for resolution and identification' => sub {
+subtest 'multiple uris used for resolution and identification, and original_uri' => sub {
   my $js = JSON::Schema::Modern->new;
   my $doc = $js->add_document(
     'https://example.com/api/' => JSON::Schema::Modern::Document->new(
@@ -999,6 +1019,7 @@ subtest 'multiple uris used for resolution and identification' => sub {
   cmp_deeply(
     $doc,
     listmethods(
+      original_uri => [ str('staging/') ],
       canonical_uri => [ str('staging/alpha.json') ],
       resource_index => unordered_pairs(
         'staging/alpha.json' => {
